--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.tuyo</groupId>
     <artifactId>hello_world</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>sicrediteste</name>
+    <name>hello_world</name>
     <description>Projeto Teste para Sicredi</description>
     <properties>
         <java.version>11</java.version>
